Fixed alignment of plane selection drop down

--- a/css/app.css
+++ b/css/app.css
@@ -19,6 +19,10 @@
   margin: 0 0.3em 0.3em 0;
 }
 
+.cut_plane {
+  margin-top: -4px;
+}
+
 #slider-container {
   width: 750px;
 }
